style: fix mobile nav z-index for offcanvas

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -316,7 +316,6 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  z-index: 100000000;
   padding: 0 0.625rem;
   max-width: 28.125rem;
   width: 100%;
